Первый пуш 15 ФЗ. Добавить БД, Комменты, Бронирование.